--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -1,6 +1,7 @@
 :root {
     --primary-color: #0A1128;
-    --white: #FFFFFF;
-    --light-gray: #EEEEEE;
+    --white-color: #FFFFFF;
+    --light-gray-color: #EEEEEE;
+    --secondary-color: crimson;
     --gap: 3rem;
-}
+  }
